# mynes

./: .gitmodules  Cargo.toml  LICENSE  flake.nix  rust-toolchain
src/: audio.rs  cpu.rs  decode.rs  ines.rs  lib.rs  main.rs  memory.rs  rustfmt.toml  slice.rs
src/audio/: pulse.rs
src/cpu/: instr.rs
src/memory/: mmc1.rs  nrom.rs
src/ppu/: backend.rs  loopy.rs  mod.rs  nametable.rs  oam.rs  palette.rs  pattern.rs  regs.rs  render.rs
tests/: blargg.rs  nestest.rs  singles.rs
