[package]
name = "mynes"
version = "0.1.0"
authors = ["Angelo Bulfone <mbulfone@gmail.com>"]
edition = "2018"
license = "MIT"

[profile.dev]
opt-level = 3

[dependencies]
memmap = "0.7.0"
genawaiter = { version = "0.99.1", default_features = false }
bounded-integer = { version = "0.4.0", features = ["step_trait"] }
image = { version = "0.23.13", default_features = false }
# image = "0.23.13"
minifb = { version = "0.19.2", optional = true }
